# NxtG.ig.ai

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GitHub-Quick-Guide.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
nextgigai/: __init__.py  config.py  database.py  main.py
nextgigai/models/: user.py
tests/: test_main.py
